fix:清理索引